--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,32 @@
                     "support": true
                 }
             }
+        },
+        {
+            "base_name": "OS-Copilot/OS-Atlas-Pro-7B",
+            "base_filename":"OS-Atlas-Pro-7B",
+            "author": "OS-Copilot",
+            "license": "Apache 2.0",
+            "source": "https://huggingface.co/OS-Copilot/OS-Atlas-Pro-7B",
+            "description": "OS-Atlas provides a series of models specifically designed for GUI agents.",
+            "tags": [
+                "detection",
+                "ocr",
+                "VLM",
+                "classification",
+                "zero-shot",
+                "visual-agent"
+            ],
+            "date_added": "2025-07-03",
+            "requirements": {
+                "packages": ["huggingface-hub","transformers", "torch", "torchvision", "qwen-vl-utils", "accelerate"],
+                "cpu": {
+                    "support": true
+                },
+                "gpu": {
+                    "support": true
+                }
+            }
         }
     ]
 }
